# pypodget

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pods.ini.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
pypodget/: __init__.py  cli.py  download.py  globals.py  podcast.py
tests/: conftest.py  test_cli.py  test_download.py  test_globals.py  test_podcast.py
