[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pypodget"
version = "0.1.1"
authors = [
    {name = "Martin Koehler", email = "grisuthedragon@users.noreply.github.com"},
]
description = "A small tool to download podcasts from RSS feeds."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "requests>=2.22",
    "tqdm>=4.30",
    "eyed3>=0.8.10",
]

[project.scripts]
pypodget = "pypodget.cli:main"

